# servicenow-mcp

./: .env.example  .gitignore  .mcp.json  ANALYSIS_OF_ALL_ECHELON_FORKS.md  ANALYSIS_OF_ECHELON_AI_LABS_PRS_AND_ISSUES.md  ANALYSIS_OF_ECHELON_AI_LABS_SERVICENOW_MCP_FORKS.md  ANALYSIS_OF_EXISTING_OPEN_SOURCE_SERVICENOW_MCP_SERVERS.md  CLAUDE.md  DEPLOYMENT.md  LICENSE  NOTICE  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-compact-rehydrate.sh  pretooluse-guard.sh  stop-checks.sh
.github/: CONTRIBUTING.md  SECURITY.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker-build.yml  integration.yml
config/: tool_packages.yaml
docs/: deploying-to-aws.md  deploying-to-gcp.md  incident_management.md  widget_management.md
nginx/: nginx.conf
src/servicenow_mcp/: cli.py  event_store.py  server.py  server_http.py  server_sse.py  transport_security.py
src/servicenow_mcp/auth/: auth_manager.py
src/servicenow_mcp/config/: tool_packages.yaml
src/servicenow_mcp/resources/: __init__.py  schema.py
src/servicenow_mcp/tools/: __init__.py  acl_tools.py  asset_tools.py  bulk_tools.py  business_rule_tools.py  case_tools.py  catalog_optimization.py  catalog_tools.py  catalog_variables.py  change_tools.py  changeset_tools.py  cmdb_relationship_tools.py  cmdb_tools.py  contract_tools.py  csm_tools.py  epic_tools.py  flow_tools.py  import_set_tools.py  incident_tools.py  knowledge_base.py  nl_tools.py  oauth_tools.py  project_tools.py  rest_message_tools.py  scheduled_job_tools.py  script_include_tools.py  scripted_rest_tools.py  scrum_task_tools.py  sctask_tools.py  story_tools.py  sys_dictionary_tools.py  syslog_tools.py  table_api_tools.py  time_card_tools.py  ui_policy_tools.py  user_criteria_tools.py  user_tools.py  widget_tools.py  workflow_tools.py
src/servicenow_mcp/utils/: __init__.py  async_http.py  config.py  fastmcp_adapter.py  helpers.py  identifier_resolver.py  nl.py  response_envelope.py  tool_utils.py
tests/: conftest.py  test_acl_tools.py  test_asset_tools.py  test_async_http.py  test_auth_manager.py  test_auth_manager_async.py  test_auth_manager_extended.py  test_bulk_tools.py  test_business_rule_tools.py  test_case_tools.py  test_catalog_optimization.py  test_catalog_tools.py  test_catalog_variables.py  test_change_tools.py  test_changeset_tools.py  test_changeset_tools_extended.py  test_cmdb_relationship_tools.py  test_cmdb_tools.py  test_config.py  test_contract_tools.py  test_csm_tools.py  test_debug_logging.py  test_execute_script_include.py  test_fastmcp_adapter.py  test_flow_tools.py  test_identifier_resolver.py  test_incident_journal.py  test_incident_tools.py  test_knowledge_base.py  test_make_request_async.py  test_nl.py  test_oauth_tools.py  test_pydantic_v2_compat.py  test_response_envelope.py  test_rest_message_tools.py  test_scheduled_job_tools.py  test_schema_resources.py  test_script_include_tools.py  test_scripted_rest_tools.py  test_sctask_tools.py  (+13 more)
tests/integration/: MCP_CLIENT_CHECKLIST.md  README.md  _cleanup.py  _report_plugin.py  _run_id.py  _version_probe.py  conftest.py  test_crud_roundtrips.py  test_edge_cases.py  test_foundation.py  test_lifecycle_flows.py  test_smoke_all_domains.py
