[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "servicenow-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server implementation for ServiceNow"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "ServiceNow MCP Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp[cli]>=1.23.0,<2.0.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
    "httpx>=0.24.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.1",
    "types-requests>=2.28.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
servicenow-mcp = "servicenow_mcp.cli:main"
servicenow-mcp-sse = "servicenow_mcp.server_sse:main"

[tool.hatch.build.targets.wheel]
packages = ["src/servicenow_mcp"]

[tool.hatch.build.targets.wheel.shared-data]
"src/servicenow_mcp/config" = "servicenow_mcp/config"

[tool.hatch.build]
include = [
  "src/servicenow_mcp/**/*.py",
  "src/servicenow_mcp/config/*.yaml",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
# Mypy runs in informational mode — failures do not block CI (see
# `continue-on-error: true` in `.github/workflows/ci.yml`).  The fork
# inherits ~250 type errors from upstream cherry-picks.  Reaching
# strict typing is gradual work; in the meantime, the configuration
# below still surfaces the high-signal issues (`Any` returns, unused
# configs) without burying them under hundreds of `no-untyped-def`
# noise from un-annotated tool functions.
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
# Strict-mode toggles are deferred: enable each one as the corresponding
# module reaches full annotation coverage.  See Phase 8/9 in CLAUDE.md.
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# __init__.py modules re-export tool symbols so the public package surface
# can be imported as `from servicenow_mcp.tools import create_incident`.
# Ruff's F401 ("imported but unused") fires on every re-export; suppressing
# it here is the idiomatic fix and matches the canonical Python convention.
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--ignore=examples" 

# Include config files in the package for uvx/pip installations
[tool.hatch.build.targets.wheel.force-include]
"src/servicenow_mcp/config/tool_packages.yaml" = "servicenow_mcp/config/tool_packages.yaml"

[tool.coverage.run]
omit = [
    "src/servicenow_mcp/cli.py",
    "src/servicenow_mcp/server.py",
    "src/servicenow_mcp/server_sse.py",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
